--- a/css/style.css
+++ b/css/style.css
@@ -1356,7 +1356,7 @@ input.product-verification__input::placeholder {
 }
 
 .footer__qr-item {
-  width: 120px;
+  width: 140px;
   margin-bottom: 15px;
 }
 
@@ -2823,3 +2823,37 @@ input.product-verification__input::placeholder {
   margin-left: -20px;
 }
 
+.verify__cont {
+  max-width: 700px;
+  row-gap: 20px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  min-height: 50vh;
+}
+
+.verify__cont  button {
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  text-decoration: none;
+  user-select: none;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0);
+  width: 100%;
+  color: #6f5fb9;
+  font-weight: 900;
+  font-size: 23px;
+  line-height: 24px;
+  padding: 5px 25px;
+  letter-spacing: -0.04em;
+  transition: 0.15s ease-in-out;
+  border-radius: 10px;
+}
+
+.verify__cont > .text {
+  text-align: center;
+}
